<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatchIt</string>
    <string name="title">Written by Natallia Isayenka</string>
    <string name="course">Game Development Course</string>
    <string name="author">Author: Natallia Isayenka</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="score">Score</string>
    <string name="about">About</string>
    <string name="main_menu">Main Menu</string>
    <string name="name">Name</string>
    <string name="submit_result">Submit Result</string>
    <string name="title_activity_about">About</string>
    <string name="ok">OK</string>
    <string name="title_activity_score">Score</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_game">Game</string>
    <string name="stop_resume">Stop/Resume Game</string>
    <string name="title_activity_tetst">tetst</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_enter_score">EnterScoreActivity</string>

</resources>
